<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Typeofcoffee">

    <TextView
        android:id="@+id/tv_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1_select_your_coffee"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/rg_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_coffee"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rb_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coffee A">
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coffee B">
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coffee C">
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coffee D">
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coffee E">
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coffee F">
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coffee G">
        </RadioButton>

    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_coffee_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_coffee_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:gravity="center"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>